Fix padding and alignment on iframes forest for trees

--- a/styles.css
+++ b/styles.css
@@ -400,8 +400,16 @@ nav {
   flex-direction: column;
   align-items: center;
 }
+.forest-videos iframe {
+  padding-bottom: 30px;
+}
 
 @media (max-width:600px) {
+
+.forest-videos iframe {
+  padding-bottom: 0;
+} 
+
 .responsive {
   width: 100%;
   height: 0;
